--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
 
 .top ul {
 	display: flex;
-	
+
 }
 
 .top li {
@@ -53,29 +53,21 @@ a {
 	text-align: center;
 	text-decoration: none;
 	font-size: 24px;
-	
+
 
 }
-.header-left li a:hover{
-	
+
+.header-left li a:hover {
+
 	color: white;
-	background-color:#00a9e0;
+	background-color: #00a9e0;
 
 }
 
 /* ------------banner 倫播圖------------- */
-.owl-carousel{
-	
+.owl-carousel {}
 
-
-}
-.item22{
-
-	
-
-
-	
-}
+.item22 {}
 
 
 
@@ -103,38 +95,46 @@ h1 {
 	margin: 50px auto;
 
 }
+
 /* -------  main 中間內文區域 -------   */
 
-.main{
+.main {
 	margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    max-width: 1920px;
+	width: 100%;
+	height: 100%;
+	max-width: 1920px;
 }
-
-
-
-
-
 
 
 
 /* -------  優惠活動  -------   */
-
-
-.nav-pr {
-	width: 100%;
+.promo-banner {
+	width: 1440px;
 	display: flex;
-	justify-content: center;
-	margin-bottom: 50px;
+	margin: 0 auto;
+}
+
+.promo-right {
+	flex: 1;
+}
+
+.promo-left {
+	flex: 1;
+}
+
+.promo-right img {
+
+	width: 100%;
 
 }
 
-.nav-pr img {
-	width: 640px;
-	margin-left: 10px;
+.promo-left img {
+	width: 100%;
 
 }
+
+
+/* -------  新品上市  -------   */
 
 .new-arrival {
 	width: 100%;
@@ -160,7 +160,7 @@ h1 {
 	margin-bottom: 10px;
 }
 
-.newproduct-button{
+.newproduct-button {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	display: block;
@@ -196,7 +196,7 @@ h1 {
 	flex-grow: 1;
 	background: #FFFFFF;
 	border: 1px solid #D9D9D9;
-	
+
 }
 
 .photo-top {}
@@ -262,7 +262,8 @@ h1 {
 	line-height: 50px;
 
 }
-.photo-top1 a:hover{
+
+.photo-top1 a:hover {
 	color: #0082FB;
 	background-color: aqua;
 }
@@ -290,7 +291,7 @@ h1 {
 .wrapper-right li {
 	background-color: white;
 	border: 1px solid #D9D9D9;
-	
+
 	width: 200px;
 	height: 230px;
 	margin-bottom: 15px
@@ -320,22 +321,20 @@ h1 {
 }
 
 /*  -----------影片區-----------*/
-.video{
+.video {
 	margin: 0 auto;
 	max-width: 1440px
-
 }
-.video-control{
+
+.video-control {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	margin-bottom: 50px;
 
 }
-.video-control li{
-	margin-right: 10px;
-	width: 100%;
-}
-  
+
+.video-control li {}
+
 
 
 
@@ -357,10 +356,10 @@ h1 {
 	margin: 0 auto;
 	height: 100%;
 	width: 100%;
-	
+
 }
 
-.footer-area{
+.footer-area {
 	width: 1440px;
 	margin: 0 auto;
 	padding: 10px;
@@ -402,12 +401,13 @@ h1 {
 
 
 /* ---------------footer-icon修改--------- */
-.btn1 i{
+.btn1 i {
 	display: block;
 	color: white;
-	
+
 }
-.btn1>::before{
+
+.btn1>::before {
 	margin-right: 5px;
 }
 
@@ -484,14 +484,12 @@ h1 {
 	margin: 0 auto;
 }
 
-.nav-lavel {
-	
-}
+.nav-lavel {}
 
 .label-3 {
 	margin-left: 0px;
-	margin-bottom:40px;
-	
+	margin-bottom: 40px;
+
 }
 
 
@@ -531,8 +529,8 @@ h1 {
 	width: 357px;
 	height: 307px;
 	border: 1px solid #D9D9D9;
-	
-	
+
+
 	margin: 20px auto;
 	text-align: center;
 	background-color: white;
@@ -583,7 +581,7 @@ h1 {
 
 .product-list {
 	display: flex;
-	
+
 	margin: auto;
 	width: 100%;
 	height: auto;
@@ -600,9 +598,10 @@ h1 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 24px;
-	
+
 }
-.dropdown-list .no-chird{
+
+.dropdown-list .no-chird {
 
 	font-size: 16px;
 	text-decoration: none;
@@ -619,16 +618,16 @@ h1 {
 /* --------------    圖片點擊放大效果----------------- */
 
 
-.product-card{
+.product-card {
 	overflow: hidden;
 }
 
-.product-card img{
+.product-card img {
 	transition: 0.6s;
-	
+
 }
 
-.product-card img:hover{
+.product-card img:hover {
 	transform: scale(1.1);
 }
 
@@ -662,7 +661,8 @@ h1 {
 	text-decoration: none;
 
 }
-.product-set li h3{
+
+.product-set li h3 {
 	margin: 5px 0;
 }
 
@@ -673,13 +673,13 @@ h1 {
 
 /* --------------    產品圖下方價錢及icon ----------------- */
 
-.pd-card-bottom{
+.pd-card-bottom {
 	font-size: 24px;
 	display: flex;
-    justify-content:space-around;
-    padding: 10px 0px 0 0px;
-    border-top: #f6f6f6 1px solid;
-    color:#0082FB;
+	justify-content: space-around;
+	padding: 10px 0px 0 0px;
+	border-top: #f6f6f6 1px solid;
+	color: #0082FB;
 }
 
 
@@ -701,10 +701,10 @@ h1 {
 	text-decoration: none;
 }
 
-.page-set a.active{
+.page-set a.active {
 	background-color: #0078E9;
-    color: white;
-    border-radius: 5px;
+	color: white;
+	border-radius: 5px;
 }
 
 
@@ -722,7 +722,8 @@ h1 {
 	text-decoration: none;
 
 }
-.side-pd .dropdown-list{
+
+.side-pd .dropdown-list {
 	margin: 10px 0;
 }
 
@@ -782,7 +783,7 @@ h1 {
 	margin: 50px auto;
 	background-color: white;
 	border: 1px solid #D9D9D9;
-	
+
 }
 
 
@@ -795,7 +796,7 @@ h1 {
 .map-top iframe {
 	width: 800px;
 	margin: 0 200px;
-	
+
 }
 
 
@@ -927,11 +928,11 @@ textarea {
 	margin-top: 10px;
 }
 
-.small img{
+.small img {
 	width: 70px;
 	display: block;
 
-	
+
 }
 
 .pf-righttext {
@@ -954,11 +955,12 @@ textarea {
 	line-height: 35px;
 	margin-bottom: 10px;
 }
-.info-dt1 li{
+
+.info-dt1 li {
 	line-height: 40px;
 }
 
-.bi-star-fill::before{
+.bi-star-fill::before {
 	color: yellow;
 	margin-right: 5px;
 }
@@ -984,7 +986,8 @@ textarea {
 	margin-top: 10px;
 	text-align: center;
 }
-.buttom-1 a:hover{
+
+.buttom-1 a:hover {
 	color: white;
 	background-color: #0082FB;
 }
@@ -1034,19 +1037,21 @@ textarea {
 	text-align: center;
 	border-radius: 20px;
 }
-.add-cartbutton{
+
+.add-cartbutton {
 	font-size: 25px;
 	text-align: center;
 	display: block;
 	width: 200px;
 	text-decoration: none;
-	color:#0082FB;
-	border:1px solid #0082FB;
+	color: #0082FB;
+	border: 1px solid #0082FB;
 	border-radius: 20px;
 	margin-top: 10px;
 
 }
-.bottom-2 a:hover{
+
+.bottom-2 a:hover {
 
 	background-color: #86f7ff;
 	color: #0082FB;
@@ -1127,79 +1132,73 @@ textarea {
 }
 
 /* ------------彈出加入購物車--------- */
-.banner-product-bestSeller-one{
+.banner-product-bestSeller-one {
 	position: relative;
 }
 
-.banner-product-bestSeller-one:hover img{
+.banner-product-bestSeller-one:hover img {
 	opacity: 0.4;
-   
+
 }
-.banner-product-bestSeller-one:hover .banner-product-bestSeller-middle{
+
+.banner-product-bestSeller-one:hover .banner-product-bestSeller-middle {
 	opacity: 1;
 }
 
-main .banner-product-bestSeller-middle{
-    margin-bottom: 10px;
+main .banner-product-bestSeller-middle {
+	margin-bottom: 10px;
 }
 
-.banner-product-bestSeller-middle a{
-	background-color:#0082FB;
-    color: white;
-    font-size: 16px;
-    width: 150px;
-    line-height: 2;
-    display: block;
+.banner-product-bestSeller-middle a {
+	background-color: #0082FB;
+	color: white;
+	font-size: 16px;
+	width: 150px;
+	line-height: 2;
+	display: block;
 }
 
-main .banner-product-bestSeller-middle a i{
-    
-}
+main .banner-product-bestSeller-middle a i {}
 
-.banner-product-bestSeller-middle{
+.banner-product-bestSeller-middle {
 	transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
+	opacity: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
 
 
 }
-.banner-product-bestSeller img{
-    display: block;
-    opacity: 1;
-    width: 100%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
+
+.banner-product-bestSeller img {
+	display: block;
+	opacity: 1;
+	width: 100%;
+	height: auto;
+	transition: .5s ease;
+	backface-visibility: hidden;
 }
 
 
 
 
-.banner-product-bestSeller{
+.banner-product-bestSeller {
 	display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    padding: 4px;
-    flex: 4;
-    overflow: hidden;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	padding: 4px;
+	flex: 4;
+	overflow: hidden;
 
 }
-	
-.banner-product-bestSeller li{
+
+.banner-product-bestSeller li {
 	border: 1px solid #D9D9D9;
-    width: 250px;
-  
-	
+	width: 250px;
+
+
 
 }
-
-
-
-
-
-
