--- a/css/style.css
+++ b/css/style.css
@@ -4,65 +4,123 @@ body {
 	font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.6;
 	background-color: #f6f6f6;
-
 }
-
 a {
 	color: black;
 }
 
-.container_header {
+.header{
+	width: 100%;
+	height: 100px;
 	background-color: white;
 	position: sticky;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 12;
-	padding: 1rem 4rem 1rem;
+    top: 0;
+    left: 0;
+    right: 0;
+	z-index: 2;
 	box-shadow: 0 0.25rem 0.75rem rgba(2, 32, 56, 0.24);
 }
 
-.top {
-	max-width: 1400px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	position: relative;
+.header-wrapper{
+	max-width: 1440px;
 	margin: 0 auto;
-
-}
-
-.top img {
-	height: 51px;
-	padding: 10px 0 0 50px;
-}
-
-.top ul {
 	display: flex;
-
 }
 
-.top li {
+.logo-a{
+	display: block;
+	width: 90px;
 	margin-left: 50px;
 }
+.logo{
+	width: 150%;
+	margin-top: 35px;
+}
 
-
-.top li a {
-	font-family: 'Noto Sans TC';
+/* 
+img{
 	display: block;
-	text-align: center;
-	text-decoration: none;
-	font-size: 24px;
+	width: 100%;
+} */
 
+.nav{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 330px;
+	margin-top: 25px;
+}
+.nav-ul{
+	display: flex;
+}
+.nav-ul li{
+	margin: 0 20px;
+}
+
+.nav li a{
+	font-size: 20px;
 
 }
 
-.header-left li a:hover {
+.nav-item{
 
-	color: white;
-	background-color: #00a9e0;
-
+	position: relative;
 }
+
+
+
+/* .nav-item:hover.nav-item::after{
+    width: 100%;
+} */
+
+.nav a{
+    display: block;
+    text-align: center;
+    line-height: 50px;
+    text-decoration: none;
+    color: black;
+	transition: color .4s ease-in;
+    position: relative;
+    font-size: 20px;
+}
+
+.nav a:hover{
+    color:#00a9e0;
+}
+
+.nav-item:hover .second_nav{
+    display: block;
+}
+
+
+.top-icon{
+    display: flex;
+}
+.top-icon{
+    margin-left: 30px;
+}
+.top-icon a{
+    color:#0078E9;
+}
+
+.top-icon a:hover{
+    color: #00a9e0;
+}
+
+.hamBar_wrapper{
+    display: none;
+    width: 44px;
+    height: 44px;
+    align-items: center;
+    justify-content: center;
+}
+
+.hamBar{
+    display: block;
+    color:#0082FB;
+}
+
+
 
 /* ------------banner 倫播圖------------- */
 .owl-carousel {}
@@ -392,9 +450,6 @@ h1 {
 	border: 1px solid #D9D9D9;
 
 }
-
-
-
 
 
 
@@ -1416,3 +1471,155 @@ main .banner-product-bestSeller-middle a i {}
 
 
 }
+
+
+/* ------------media--------- */
+
+@media screen and (max-width: 415px){
+
+	.header{
+        max-width: 414px;
+        width: 100%;
+        position: sticky;
+		top: 0px;
+		z-index: 1000;
+        height: 65px;
+		background-color: rgba(255, 255, 255, 0.9);
+    }
+	.header-wrapper{
+        max-width: 414px;
+        width: 100%;
+        margin: 0 auto;
+        justify-content: space-between;
+		
+    }
+
+	.logo-a{
+        width: 50px;
+    }
+
+    .logo{
+        margin-top: 22px;
+    }
+
+	.hamBar_wrapper{
+        display: block;
+        max-width: 20px;
+        align-items: center;
+        padding-right: 20px;
+        padding-top: 20px;
+    } 
+
+	.nav{
+        /* display: none; */
+        display: flex;
+        opacity: 0;
+        margin: auto;
+        position: absolute;
+        top: 65px;
+        width: 100%;
+        background-color:#0082FB;
+        pointer-events: none;
+        transition: opacity 0.3s ease-in;
+    }
+
+	.nav_show{
+        opacity: 1;
+        transition: opacity 0.5s ease-in;
+		pointer-events: auto;
+    }
+	.nav-ul{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+    }
+
+	.nav li a{
+        font-size: 15px;
+		color: #FFFFFF;
+    }
+
+
+    .top-icon{
+        margin: auto;
+    }
+
+	.nav-item::after{
+        display: none;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
