--- a/css/header&footer.css
+++ b/css/header&footer.css
@@ -43,7 +43,7 @@
 }
 
 .nav li a{
-	font-size: 20px;
+	font-size: 1.2rem;
 
 }
 
@@ -52,15 +52,15 @@
 	position: relative;
 }
 
-
+.search-function{
+	display: none;
+}
 
 .nav a{
     display: block;
     text-align: center;
-    
     text-decoration: none;
     color: black;
-	transition: color .4s ease-in;
     position: relative;
     font-size: 20px;
 }
@@ -68,6 +68,7 @@
 .nav a:hover{
     color:#00a9e0;
 }
+
 
 
 
@@ -95,17 +96,18 @@
   
   .hn-list-item {
 	position: absolute;
-	background-color:aliceblue;
-	left: -45px;
+	background-color:white;
+	left: -26px;
 	top: 30px;
 	display: none;
-	padding: 0 10px;
 	z-index: 1;
   }
   
   .hn-list-item li {
 	white-space: nowrap;
-	width: 90px;
+	width: 120px;
+	margin: 0;
+	border-bottom: 1px solid #D9D9D9;
 	/* width: 10vw; */
   }
   
@@ -121,6 +123,13 @@
 	display: block;
 	/* visibility: visible; */
   }
+
+  .hn-list-model-item li:hover{
+	background-color: #00a9e0;
+  } 
+  .hn-list-model-item li a:hover{
+	color: #fff;
+  } 
 
 
 
@@ -147,6 +156,7 @@
  .hn-function i{
 	font-size: 20px;
 	color: #0082FB;
+	cursor: pointer;
  } 
  .hn-function i:hover{
 	color:aquamarine;
@@ -209,7 +219,7 @@
 }
 
 .footer-area {
-	width: 1400px;
+	max-width: 1400px;
 	margin: 0 auto;
 	padding: 10px;
 	display: flex;
@@ -273,7 +283,7 @@
 }
 
 .info-right img {
-	width: 140px;
+	width: 18%;
 	margin-top: 20px;
 }
 
@@ -334,7 +344,7 @@
 	position: fixed;
 	right: 0px;
 	bottom: 20px;
-	color: #0078E9;
+	color:black;
 	z-index: 100;
 	
   }
@@ -361,9 +371,33 @@
         justify-content: space-between;
 		
     }
-	.hn-function{
+	.hn-function {
+		margin-left: 70px;
+		margin-top: -3px;
+		width: 20px;
+		
+	}
+
+	.hn-function .bi-search{
+		display: none;
+		
+
+	} 
+	.hn-function .bi-cart{
+		
 		display: none;
 	}
+
+	.hn-function .bi-person{
+		display: block;
+		max-width: 20px;
+		align-items: center;
+		
+		
+
+	}
+
+
 	  /* ----------hover---------- */
 	  .nav-ul > li:hover > .hn-list-item  {
 		display: none;
@@ -385,6 +419,7 @@
         align-items: center;
         padding-right: 36px;
         padding-top: 20px;
+		order: 4;
     } 
 
 	.nav{
@@ -400,6 +435,18 @@
         transition: opacity 0.3s ease-in;
     }
 
+	.search-function{
+		display:flex;
+		padding: 15px;
+		width: 95%;
+		border-bottom: 1px solid white;
+	}
+	.search-function i{
+		margin-right: 5px;
+		color: white;
+		
+	}
+
 	.nav_show{
         opacity: 1;
         transition: opacity 0.5s ease-in;
@@ -412,12 +459,18 @@
         align-items: center;
     }
 	.nav-ul li{
-		padding: 15px;
+		padding: 15px 0px;
+		width: 70%;
+		border-bottom: 1px solid white;
+	}
+	.nav-item:nth-child(5){
+		border: none;
 	}
 
 	.nav li a{
         font-size: 15px;
 		color: #FFFFFF;
+		text-align: left;
     }
 
 
