--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h1 {
 
 /* -------  優惠活動  -------   */
 .promo-banner {
-	width: 1400px;
+	max-width: 1400px;
 	display: flex;
 	margin: 0 auto;
 }
@@ -130,7 +130,7 @@ h1 {
 	font-style: normal;
 	display: block;
 	width: 150px;
-	line-height: 50px;
+	line-height: 30px;
 	background-color: #FFFFFF;
 	border: 1px solid #D9D9D9;
 	text-align: center;
@@ -138,7 +138,7 @@ h1 {
 	color: black;
 	border-radius: 40px;
 	margin: 0 auto;
-	font-size: 24px;
+	font-size: 20px;
 }
 
 
@@ -223,6 +223,7 @@ h1 {
 
 }
 .item h3{
+	color: black;
 	font-size: 1rem ;
 	padding: 10px;
 	line-height: 1.6;
@@ -233,7 +234,7 @@ h1 {
 	margin: auto;
 	font-size: 1.4rem;
 	display: block;
-	width: 50%;
+	width: 80%;
 	background-color: #0082FB;
 	color: aliceblue;
 	border-radius: 40px;
@@ -495,6 +496,7 @@ h1 {
 	right: 10px;
 	z-index: 99;
 	bottom: 50px;
+	cursor: pointer;
 }
 
 @media screen and (max-width: 415px){
@@ -532,23 +534,14 @@ h1 {
 
 .nav-lavel {}
 
-.label-3 {
-	margin-left: 0px;
-	margin-bottom: 40px;
-
+.pm-side{
+	margin-left: 18px;
+	margin-bottom: 15px;
+	color: #999;
+	
 }
-
-
-.label-3 a {
-	font-size: 16px;
-	font-family: 'Noto Sans TC';
-	font-style: normal;
-	text-decoration: none;
-}
-
-.label-3 img {
-	width: 8px;
-	margin: 0 10px;
+.pm-side a{
+	color: #999;
 }
 
 
@@ -623,8 +616,12 @@ h1 {
 
 	.promo-in ul {
 		width: 100%;
-	   display: flex;
-	   flex-direction: column;
+		display: flex;
+		flex-direction: column;
+
+	}
+	.pm-side {
+		margin-left: 27px;
 
 	}
    
@@ -638,9 +635,22 @@ h1 {
 	margin: 50px auto;
 	display: flex;
 	flex-wrap: wrap;
-	width: 1400px;
+	width: 1230px;
 	justify-content: space-between;
 }
+
+.pd-side{
+	margin-bottom: 15px;
+	margin-left: 9px;
+	color: #999;
+}
+.pd-side a{
+	color: #999;
+}
+
+
+
+
 
 /* ----------category-container---------- */
 
@@ -651,7 +661,7 @@ h1 {
   .category-control select {
 	outline: none;
 	padding: 3px;
-	margin-right: 150px;
+	margin-right: 48px;
   }
 
 
@@ -671,41 +681,88 @@ h1 {
 	border-bottom: 1px solid black;
 }
 
-.side-left li {
-	font-family: 'Noto Sans TC';
-	font-style: normal;
-	font-size: 24px;
 
-}
+/* ---------  商品區左邊彈出導覽列--------- */
 
-.dropdown-list .no-chird {
+.category-list .bi-plus{
+	font-size: 1.4rem;
+  }
+  
+  .category-list .bi-dash {
+	font-size: 1.4rem;
+	display: none;
+  }
+  
+  .shop-category {
+	display: flex;
+  }
+  
+  .category-list {
+	display: flex;
+	flex-direction: column;
+  }
+  
+  .category-list li {
+	/* margin-bottom: 10px; */
+	padding: 10px;
+	align-items: center;
+	width: 150px;
+	/* display: inline-block; */
+	/* outline:1px solid; */
+  }
+  
+  .category-list li > a {
+	color: black;
+	width: 100%;
+	font-size: 1.2rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/* line-height: 20px; */
+	padding: 5px 0;
+  }
+  
+  .category-list li:hover > a {
+	color: #00a9e0;
+  }
+  
+  .category-list ul {
+	margin-top: 10px;
+	display: none;
+  }
+  
+  .category-list ul a {
+	font-size: 1rem;
 
-	font-size: 16px;
-	text-decoration: none;
-	border: none;
-}
+  }
+  
+  .mobil-category {
+	display: none;
+  }
+  
+  .category-list li:hover ul {
+	/* display: block; */
+  }
 
+/* ---------------------------------------------- */
 
-.dropdown-list .show-all-dropdown {
-	font-size: 24px;
-	margin-bottom: 10px;
-}
 
 
 /* --------------    圖片點擊放大效果----------------- */
 
 
+
+
 .product-card {
-	overflow: hidden;
-}
-.product-card .bi-heart{
-	color: red;
+	
+	transition: .5s ease;
 
 }
-.product-card .bi-credit-card-2-back{
-	color: black;
-
+.product-card:hover {
+	transform: translateY(-5%);
+	
 }
+
 
 .product-card img {
 	transition: 0.6s;
@@ -713,7 +770,7 @@ h1 {
 }
 
 .product-card img:hover {
-	transform: scale(1.1);
+	/* transform: scale(1.1); */
 }
 
 
@@ -746,13 +803,27 @@ h1 {
 }
 
 .product-set li h3 {
-	margin: 5px 0;
+	margin: 10px auto;
 	color: black;
 }
 
 
 .product-set img {
 	width: 100%;
+}
+
+.product-card-1 .bi-heart{
+	color: red;
+
+}
+.product-card-1 .bi-cart-fill{
+	color:#999;
+
+}
+
+.product-card-1:hover{
+	outline:#00a9e0 1px solid;
+
 }
 
 /* --------------    產品圖下方價錢及icon ----------------- */
@@ -769,27 +840,45 @@ h1 {
 
 /* --------------    產品區 下方分頁1.2.3.編輯----------------- */
 
-.page-main {
-	width: 100%;
+/* page */
+
+.pagination {
+	padding: 0px 263px;
+	margin: 20px;
 	display: flex;
-}
+	justify-content: center;
+  }
+  
+  
+  .pagination li {
+	display: flex;
+	justify-content: center;
+	border: none;
+	background-color: rgb(0,0,0,0);
+  }
 
-.page-set {
-	margin: auto;
-}
-
-.page-set a {
+  
+  .pagination a {
 	color: black;
-	float: left;
-	padding: 8px 20px;
-	text-decoration: none;
-}
+	font-size: 1rem;
+	margin: 0 15px;
+	text-align: center;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+  }
+  
+  .pagination a:hover {
+	background-color:#00EBE3;
+  }
+  
+  .pagination .fas {
+	/* font-size: 1.4rem; */
+  }
+  
 
-.page-set a.active {
-	background-color: #0078E9;
-	color: white;
-	border-radius: 5px;
-}
+
 
 /* ---------------找商品區rwd  --------- */
 
@@ -804,19 +893,11 @@ h1 {
 
 	}
 
-	.label-3{
-		margin-left: 18px;
-	}
-	.side-left{
-		display: none;
-	}
+	
 	.product-list{
 		flex-direction: column;
 	}
 
-	.side-pd{
-		padding: 0 20px;
-	}
 
 	.product-set {
 		margin-top: 20px;
@@ -831,13 +912,31 @@ h1 {
 		width: 100%;
 	}
 
+	.category-list{
+		display: none;
+	}
+
+	.pagination li{
+		display: none;
+	}
+	.pd-side{
+		margin-left: 15px;
+
+	}
+
 
 }
 
 
 /* ---------------購物說明--------- */
 
-
+.info-side{
+	margin: 0 0 15px 0px;
+	color: #999;
+}
+.info-side a{
+	color: #999;
+}
 .side-pd li {
 	margin-bottom: 10px;
 }
@@ -845,6 +944,8 @@ h1 {
 .side-pd a {
 	margin-left: 10px;
 	text-decoration: none;
+	font-size: 1.3rem;
+	color: black;
 
 }
 
@@ -870,6 +971,7 @@ h1 {
 }
 
 .info-set li h1 {
+	margin: 0;
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 36px;
@@ -900,6 +1002,10 @@ h1 {
 /* ---------------購物說明rwd--------- */
 
 @media screen and (max-width: 415px){
+
+	.info-side{
+		margin-left: 15px;
+	}
 	.info-set{
 		width: 100%;
 		box-sizing: border-box;
@@ -907,6 +1013,10 @@ h1 {
 	}
 	.info-set ul{
 		padding: 0px 15px;
+	}
+	.side-left{
+		margin: 0 0 10px 15px;
+
 	}
 
 
@@ -918,12 +1028,22 @@ h1 {
 /* ---------------聯絡我們區--------- */
 
 
+
 .loc-main {
 	width: 1200px;
 	margin: 50px auto;
 	background-color: white;
 	border: 1px solid #D9D9D9;
 
+}
+
+.lc-side{
+	margin-left: 36px;
+	margin-bottom: 15px;
+	color: #999;
+}
+.lc-side a{
+	color: #999;
 }
 
 
@@ -1006,7 +1126,7 @@ h1 {
 	text-decoration: none;
 	margin-top: 10px;
 	text-align: center;
-	border-radius: 10px;
+	border-radius: 5px;
 	border: none;
 
 }
@@ -1071,6 +1191,9 @@ textarea {
 	.info-downright ul{
 		display: none;
 	}
+	.lc-side{
+		margin-left: 18px;
+	}
 
 }
 
@@ -1092,6 +1215,15 @@ textarea {
     padding: 0 20px;
 }
 
+.pdd-side{
+	color: #999;
+	margin-bottom: 15px;
+}
+.pdd-side a{
+	color: #999;
+}
+
+
 .pd-leftimg {
 	width: 100%;
 
@@ -1111,6 +1243,7 @@ textarea {
 .small img {
 	width: 70px;
 	display: block;
+	border: 1px solid #D9D9D9;
 
 }
 
@@ -1358,6 +1491,7 @@ img {
 
 .banner-bestSeller li a {
 	text-decoration: none;
+	
 
 }
 
@@ -1387,6 +1521,9 @@ img {
 .banner-product-bestSeller-one {
 	position: relative;
 }
+.banner-product-bestSeller-one a{
+	color: black;
+}
 
 .banner-product-bestSeller-one:hover img {
 	opacity: 0.4;
@@ -1395,6 +1532,7 @@ img {
 
 .banner-product-bestSeller-one:hover .banner-product-bestSeller-middle {
 	opacity: 1;
+	transform: translateY(-100%);
 }
 
 main .banner-product-bestSeller-middle {
@@ -1416,10 +1554,10 @@ main .banner-product-bestSeller-middle a i {}
 	transition: .5s ease;
 	opacity: 0;
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
+	top: 40%;
+    left: 30%;
+	/* transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%); */
 	text-align: center;
 
 }
@@ -1470,6 +1608,12 @@ main .banner-product-bestSeller-middle a i {}
 		width: 100%;
 	} 
 	.pd-downcontainer img{
+		width: 100%;
+	}
+	.bottom-2 ul{
+		display: block;
+	}
+	.add-cartbutton{
 		width: 100%;
 	}
 
@@ -1529,14 +1673,7 @@ main .banner-product-bestSeller-middle a i {}
 
 	
 	.banner-product-bestSeller-middle{
-		transition: .5s ease;
-		opacity: 0;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(15%, -10%);
-		-ms-transform: translate(-0%, -0%);
-		text-align: center;
+		display: none;
 	}
 	
 	.banner-product-bestSeller-middle a{
@@ -1556,6 +1693,12 @@ main .banner-product-bestSeller-middle a i {}
 		transition: .5s ease;
 		opacity: 1;
 		position: static;
+	}
+	.pd-downcontainer h1{
+		font-size: 1.8rem;
+	}
+	.pd-downcontainer h2 {
+		font-size: 1.5rem;
 	}
 	
 	
