--- a/css/header&footer.css
+++ b/css/header&footer.css
@@ -15,6 +15,8 @@
 	max-width: 1440px;
 	margin: 0 auto;
 	display: flex;
+	display: flex;
+    justify-content: space-around;
 }
 
 .logo-a{
@@ -30,9 +32,8 @@
 
 .nav{
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	margin-left: 354px;
 	margin-top: 25px;
 }
 .nav-ul{
@@ -138,9 +139,8 @@
 /* ----------- search 展開------------- */
 
 .hn-function {
-	margin-left: auto;
 	margin-top: 20px;
-	width: 440px;
+	width: 110px;
     flex-basis: 150px;
 	display: flex;
 	justify-content:  flex-end;
@@ -203,7 +203,7 @@
 }
 .bi-person::before{
 	font-size: 22px;
-    margin-top: 12px;
+    margin-top: 13px;
 }
 
 /* -----------footer-------------- */
@@ -283,7 +283,7 @@
 }
 
 .info-right img {
-	width: 18%;
+	width: 20%;
 	margin-top: 20px;
 }
 
@@ -356,7 +356,7 @@
 @media screen and (max-width: 415px){
 
 	.header{
-        max-width: 414px;
+        max-width: 415px;
         width: 100%;
         position: sticky;
 		top: 0px;
@@ -365,7 +365,7 @@
 		background-color: rgba(255, 255, 255, 0.9);
     }
 	.header-wrapper{
-        max-width: 414px;
+        max-width: 415px;
         width: 100%;
         margin: 0 auto;
         justify-content: space-between;
@@ -418,7 +418,7 @@
         max-width: 20px;
         align-items: center;
         padding-right: 36px;
-        padding-top: 20px;
+        padding-top: 26px;
 		order: 4;
     } 
 
